--- a/index.html
+++ b/index.html
@@ -768,17 +768,18 @@
         <div class="col-12 col-md-4 mb-4">
           <h5 class="fw-bold">Links</h5>
           <div class="footer-link-wrap">
-            <a href="#" class="footer-link">Home</a>
+            <a href="#home" class="footer-link">Home</a>
           </div>
           <div class="footer-link-wrap">
             <a href="#" class="footer-link">About Us</a>
           </div>
           <div class="footer-link-wrap">
-            <a href="#" class="footer-link">Ways to Give</a>
+            <a href="#matter" class="footer-link">Matter</a>
           </div>
           <div class="footer-link-wrap">
-            <a href="#" class="footer-link">Join Legacy circle</a>
+            <a href="#ways" class="footer-link">Ways to Give</a>
           </div>
+         
         </div>
 
 
