--- a/way1.html
+++ b/way1.html
@@ -91,7 +91,7 @@
 
     <!-- Bequest or Devise -->
     <div class="give-section">
-      <h4><span class="give-icon">📝</span>Bequest or Devise</h4>
+      <h4><span class="give-icon">📝</span>Bequest</h4>
       <p>A bequest (or devise, in the case of real estate) is the most traditional and widely used form of planned giving. It refers to a gift made through a donor’s will or living trust, designating a portion of their estate to the university.</p>
       <p>Bequests allow individuals to create a lasting legacy without affecting their current financial situation.</p>
       <strong>Key Benefits to the donor:</strong>
