--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
       <!-- Collapsible Menu -->
       <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
         <ul class="navbar-nav mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="#matter">Why It Matters</a></li>
           <li class="nav-item"><a class="nav-link" href="#ways">Ways to Give</a></li>
@@ -856,7 +855,7 @@
             <a href="#" class="footer-link">About Us</a>
           </div>
           <div class="footer-link-wrap">
-            <a href="#matter" class="footer-link">Matter</a>
+            <a href="#matter" class="footer-link">Why It Matters</a>
           </div>
           <div class="footer-link-wrap">
             <a href="#ways" class="footer-link">Ways to Give</a>
@@ -869,9 +868,10 @@
         <div class="col-12 col-md-4 mb-4">
           <h5 class="fw-bold">Social Media Links</h5>
           <a href="https://www.linkedin.com/in/dean-of-resources-and-alumni-iit-kanpur-32a377198/"
-            class="me-3 text-white fs-4" aria-label="LinkedIn">
-            <i class="fab fa-linkedin"></i>
-          </a>
+    class="me-3 text-white fs-4 text-decoration-none" aria-label="LinkedIn">
+    <i class="fab fa-linkedin"></i>
+</a>
+
           <a href="https://www.youtube.com/channel/UCVAeCAtvJbYXM0lW0EiDf9A" class="text-white fs-4"
             aria-label="YouTube">
             <i class="fab fa-youtube"></i>
